--- a/calculadora.html
+++ b/calculadora.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- CSS PERSONAL -->
-    <link rel="stylesheet" href="/calc.css" />
+    <link rel="stylesheet" href="/css/calculadora.css"/>
   </head>
 
   <body>
@@ -17,9 +17,11 @@
       </div>
       <div class="buttons">
         <!-- Borrado completo -->
-        <input type="button" value="AC" id="clear" />
+        <input type="button" value="AC" id="limpiar" />
+        
         <!-- Borrado ultimo digito -->
-        <input type="button" value="DEL" id="erase" />
+        <input type="button" value="DEL" id="borrar" />
+        
         <!-- Definimos cada boton como input de tipo boton -->        
         <input type="button" value="/" class="input-button" />
         <input type="button" value="*" class="input-button" />
@@ -38,7 +40,7 @@
         <input type="button" value="2" class="input-button" />
         <input type="button" value="3" class="input-button" />
 
-        <input type="button" value="=" id="equal" />
+        <input type="button" value="=" id="igual" />
         <input type="button" value="0" class="input-button" />
         <input type="button" value="." class="input-button" />
       </div>
@@ -50,6 +52,6 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
         </script>
     <!-- Script de javascripts -->
-        <script src="/calc.js"></script>
+        <script src="/js/calculadora.js"></script>
   </body>
 </html>
