--- a/calculadora.html
+++ b/calculadora.html
@@ -8,6 +8,9 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- CSS PERSONAL -->
     <link rel="stylesheet" href="/css/calculadora.css"/>
+    <!-- CSS DE SWEETALERT2 -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
+    
   </head>
 
   <body>
@@ -53,5 +56,12 @@
         </script>
     <!-- Script de javascripts -->
         <script src="/js/calculadora.js"></script>
+    <!-- SCRIPT SWEETALERT2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- SCRIPT JQuery -->
+    <script
+    src="https://code.jquery.com/jquery-3.6.4.js"
+    integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    crossorigin="anonymous"></script>
   </body>
 </html>
