--- a/calculadora.html
+++ b/calculadora.html
@@ -13,7 +13,9 @@
     
   </head>
   <h1>Calculadora</h1>
-  <br>
+  <h4>Autores: Grupo 6 - Año 2023</h4>
+  <p>Claudio Azócar | Sabina Leal | Consuelo Hermosilla </p>
+
   <body>
     <div class="calculator">
       <div class="display">
